# KIQ--KIQ-Is-Quality----A--Game-Engine

./: .gitignore
app/: CMakeLists.txt
app/include/: main.h
app/source/: main.cc
core/: CMakeLists.txt
core/include/: KIQ.h  engine.h
core/include/KIQ/: engine.h  memory.h  quaternion.h  string.h  timer.h  vector2.h  vector3.h  vector4.h  window.h
core/source/: engine.cc  window.cc
